--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-APP_NAME=Laravel
+APP_NAME=Blog
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:3N1FgBszttMXGvAb08GVlvCpbCM3TfJT9GNsFB7tydM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
+APP_LOCALE=es
+APP_FALLBACK_LOCALE=es
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=127.0.0.1
+DB_PORT=54323
+DB_DATABASE=Pruebablog
+DB_USERNAME=postgres
+DB_PASSWORD=Escoturismo12345
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
